--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node ./test",
     "build": "webpack --config webpack.config.js"
   },
   "keywords": [],
@@ -14,6 +14,9 @@
     "jszip": "^3.2.2"
   },
   "devDependencies": {
+    "glob-all": "^3.1.0",
+    "mocha": "^10.4.0",
+    "rimraf": "^3.0.1",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   }
