chore: 完善项目配置

--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "zip-plugin",
+  "name": "webpack-plugin-jszip",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A simple zip plugin of webpack for compressing all the bundle files into a single zip file.",
+  "main": "./plugins/zip-plugin.js",
   "scripts": {
     "test": "node ./test",
     "build": "webpack --config webpack.config.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["webpack",
+  "plugin",
+  "zip"],
+  "author": "Weijian Xu",
   "license": "ISC",
   "dependencies": {
     "jszip": "^3.2.2"
